--- a/index.html
+++ b/index.html
@@ -3,54 +3,195 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Mobile responsive -->
+  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/05a8381518.js"></script>
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap" rel="stylesheet">
-  <!-- Style CSS -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+  <!-- Tailwind CSS -->
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Own Style CSS -->
   <link rel="stylesheet" href="style.css">
   <title>Bike Store</title>
 </head>
 
-<body>
-  <nav class="nav-bar">
-    <ul class="nav-bar-ul">
-      <li><a href="#products">Products</a></li>
-      <li><a href="#built-it">Built your own</a></li>
-      <li><a href="#our-team">Team</a></li>
-      <li><a href="#contact-us">Contact</a></li>
-    </ul>
-  </nav>
+<body style="font-family: 'Roboto', sans-serif;">
+  <section class="px-20 py-6">
+    <nav class="flex justify-between items-center">
+      <div>
+        <a href="/"><img src="images/chain-logo.png" alt="bike store logo" width="80" height="16"></a>
+      </div>
+      <div>
+        <a href="#products" class="text-s font-bold px-1.5">Products</a>
+        <a href="#bestSeller" class="text-s font-bold px-1.5">Best Seller</a>
+        <a href="#our-team" class="text-s font-bold px-1.5">Team</a>
+        <a href="#contact-us" class="text-s font-bold px-1.5">Contact</a>
+      </div>
+    </nav>
+    <header class="max-w-4xl mx-auto mt-10">
+      <div class="bg-cover h-96" style="background-image: url('images/bg-bikes.jpg')">
+        <div class="max-w-4xl mx-auto">
+          <h1 class="py-6 text-4xl text-yellow-400 text-center">
+            “You are one ride away from a good mood.”
+          </h1>
+          <h2 class="px-2 text-2xl text-yellow-800 text-right">— Sarah Bentley, British cyclist</h2>
+        </div>
+      </div>
+    </header>
 
-  <section class="header">
-    <h1>
-      <img class="logo-header" src="images/chain-logo.png" alt="bike store logo"> Ride Your Bike </h1>
-    <h2>Let the trip begin</h2>
-    <aside class="quote-header"><i>“You are one ride away from a good mood.”</i> <br> — Sarah Bentley, British cyclist</aside>
+    <!-- MAIN SECTION -->
+
+    <main id="products" class="max-w-7xl mx-auto mt-20 space-y-4 text-center">
+
+      <div class="grid grid-cols-3">
+
+        <article
+          class="mx-2 transition-colors duration-300 hover:bg-gray-100 rounded-xl border-opacity-0 hover:border-opacity-5">
+          <div>
+            <h3 class="mt-4 font-semibold text-xl">Road</h3>
+            <div class="hero container max-w-screen-lg mx-auto pb-10 flex justify-center">
+
+              <img class="py-4" src="images/road.png" alt="clapperboard icon" width="80">
+            </div>
+            <p class="text p-2">Built for traveling at speed on paved roads, for urban cyclists and casual cruisers.</p>
+            <footer class="my-4">
+              <a class="px-3 py-1 border border-gray-300 rounded-full text-xs uppercase font-semibold"
+                href="https://www.youtube.com/watch?v=p6A3kni_108">Watch a Video</a>
+            </footer>
+
+          </div>
+        </article>
+        <article
+          class="mx-2 transition-colors duration-300 hover:bg-gray-100 rounded-xl border-opacity-0 hover:border-opacity-5">
+          <div>
+            <h3 class="mt-4 font-semibold text-xl">Mountain</h3>
+            <div class="hero container max-w-screen-lg mx-auto pb-10 flex justify-center">
+              <img class="py-4" src="images/mountains.png" alt="clapperboard icon" width="80">
+            </div>
+            <p class="text p-2">Designed for off-road cycling, designed to enhance durability and
+              performance
+              in rough terrain.</p>
+            <footer class="my-4">
+              <a class="px-3 py-1 border border-gray-300 rounded-full text-xs uppercase font-semibold"
+                href="https://bikesreviewed.com/mountain/mtb-ultimate-guide/">Watch a Video</a>
+            </footer>
+
+          </div>
+        </article>
+        <article
+          class="mx-2 transition-colors duration-300 hover:bg-gray-100 rounded-xl border-opacity-0 hover:border-opacity-5">
+          <div>
+            <h3 class="mt-4 font-semibold text-xl">Hybrid</h3>
+            <div class="hero container max-w-screen-lg mx-auto pb-10 flex justify-center">
+              <img class="py-4" src="images/hybrid-solution.png" alt="clapperboard icon" width="80">
+            </div>
+            <p class="text p-2">General-purpose bike that can tolerate a wide range of riding conditions.</p>
+            <footer class="my-4">
+              <a class="px-3 py-1 border border-gray-300 rounded-full text-xs uppercase font-semibold"
+                href="https://bikesreviewed.com/hybrid/ultimate-guide/">Watch a Video</a>
+            </footer>
+
+          </div>
+        </article>
+      </div>
+    </main>
+
+    <!-- BEST SELLER -->
+
+    <section id="bestSeller" class="max-w-7xl mx-auto mt-10 space-y-4">
+      <article class="mx-2 bg-gray-100 rounded-xl border border-opacity-5">
+        <div class="py-6 px-5 flex">
+
+          <div class="flex flex-wrap justify-center m-auto pr-8">
+            <img src="/images/bike2bestseller.png" alt="best seller bike" width="200">
+          </div>
+
+          <div class="flex-1">
+            <header>
+              <div class="flex items-center mt-2 mb-2">
+                <svg class="mx-1 w-4 h-4 fill-current text-yellow-500" xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20">
+                  <path
+                    d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z" />
+                </svg>
+                <svg class="mx-1 w-4 h-4 fill-current text-yellow-500" xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20">
+                  <path
+                    d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z" />
+                </svg>
+                <svg class="mx-1 w-4 h-4 fill-current text-yellow-500" xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20">
+                  <path
+                    d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z" />
+                </svg>
+                <svg class="mx-1 w-4 h-4 fill-current text-yellow-500" xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20">
+                  <path
+                    d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z" />
+                </svg>
+                <svg class="mx-1 w-4 h-4 fill-current text-yellow-500" xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20">
+                  <path
+                    d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z" />
+                </svg>
+              </div>
+              <p class="block text-gray-400 text-xs mb-4">#1 Best Seller</p>
+              <h1 class="text-l font-bold">Mountain Bike, Stone Mountain 26 inch</h1>
+            </header>
+            <div class="mt-3">
+              <p class="text-sm">
+                An exclusive: Ideal for ages 13 and up and a minimum rider height of 5 feet; durable steel frame backed
+                by our limited lifetime warranty (see owner's manual); suspension fork handles bumps and dips for a
+                smoother-feeling ride
+              </p>
+            </div>
+            <footer class="flex justify-between item-center">
+              <div></div>
+              <div class="mt-4">
+                <a class="px-3 py-1 border bg-gray-200 border-gray-500 rounded-full text-xs uppercase font-semibold"
+                  href="#">Read
+                  More</a>
+              </div>
+
+            </footer>
+
+          </div>
+
+        </div>
+      </article>
+
+    </section>
+
+
+    <footer></footer>
 
   </section>
-  <section id="products" class="background-dark">
-    <article class="container">
-      <h3>Road</h3>
-      <p class="text">Built for traveling at speed on paved roads.</p>
-      <img>
-      <a class="butn" href="https://www.youtube.com/watch?v=p6A3kni_108">Watch a Video</a>
-    </article>
-    <article class="container">
-      <h3>Mountain</h3>
-      <p class="text">Designed for off-road cycling, incorporate features designed to enhance durability and performance in rough terrain.</p>
-      <img>
-      <a class="butn"  href="https://bikesreviewed.com/mountain/mtb-ultimate-guide/">Learn More</a>
-    </article>
-    <article class="container">
+
+
+
+
+
+
+  <!-- </section>
+  
+    <article class="enter container">
       <h3>Hybrid</h3>
-      <p class="text">Is a general-purpose bike that can tolerate a wide range of riding conditions and applications.</p>
+      <p class="text">Is a general-purpose bike that can tolerate a wide range of riding conditions and applications.
+      </p>
       <img>
-      <a class="butn"  href="https://bikesreviewed.com/hybrid/ultimate-guide/">Lear More</a>
+      <a class="butn" href="https://bikesreviewed.com/hybrid/ultimate-guide/">Lear More</a>
     </article>
-    <article class="container">
+    <article class="enter container">
       <h3>Sales and Specials</h3>
       <p class="text">Best Bike Deals</p>
       <img>
@@ -61,19 +202,19 @@
   <section class="container" id="built-it">
     <h3>How do we structure the day?</h3>
     <div>
-      <article class="services-box">
+      <article class="enter services-box">
         <h4>Frame</h4>
         <img src="images/frame.png" alt="frame of bike">
       </article>
-      <article class="services-box">
+      <article class="enter services-box">
         <h4>Rims</h4>
         <img src="images/wheel.png" alt="wheel of bike">
       </article>
-      <article class="services-box">
+      <article class="enter services-box">
         <h4>Grips</h4>
         <img src="images/handlebar.png" alt="grips of bike">
       </article>
-      <article class="services-box">
+      <article class="enter services-box">
         <h4>Chain</h4>
         <img src="images/chain.png" alt="chain of bike">
       </article>
@@ -86,19 +227,19 @@
     </p>
     <hr class="division-header-team">
     <div>
-      <article class="team-description">
-      <h3>Construction Team</h3>
-      <img src="images/helmet.png" alt="helmet">
+      <article class="enter team-description">
+        <h3>Construction Team</h3>
+        <img src="images/helmet.png" alt="helmet">
     </div>
     <hr class="division-team">
     <div>
-      <article class="team-description">
+      <article class="enter team-description">
         <h3>Design Team</h3>
-      <img src="images/creativity.png" alt="creativity tools">
-    </article>
+        <img src="images/creativity.png" alt="creativity tools">
+      </article>
     </div>
-    
-      
+
+
   </section>
   <footer class="footer" id="contact-us">
     <h5>Contact Us</h5>
@@ -107,7 +248,7 @@
     <i class="fab fa-twitter-square fa-3x"></i>
     <a href="contact.html"><i class="fas fa-address-book fa-3x"></i></a>
 
-  </footer>
+  </footer>  -->
 
 </body>
 
